Grey the SQL panel in edit data mode. Fixes #1423
Introduced a new class 'cm_disabled' with css property background-color to '#EEEEE'
Query tool in edit mode, add the class 'cm_disabled' to set background color to dark and set the cursor property to 'nocursor' to disable editor.
Increased the query tool title padding to fix the issue of whitespace below the title.

--- a/web/pgadmin/static/css/overrides.css
+++ b/web/pgadmin/static/css/overrides.css
@@ -1359,3 +1359,8 @@ table.backgrid {
 .aciTree.aciTreeLoad {
   background: none;
 }
+
+/* class to disable Codemirror editor */
+.cm_disabled {
+  background: #EEEEEE;
+}
