--- a/web/pgadmin/tools/sqleditor/static/css/sqleditor.css
+++ b/web/pgadmin/tools/sqleditor/static/css/sqleditor.css
@@ -35,7 +35,7 @@
 
 .editor-title {
   background-color: #2C76B4;
-  padding: 2px;
+  padding: 4px 5px;
   color: white;
   font-size: 13px;
 }
